fix LikeControllerTest